# macropad

./: .gitmodules  CMakeLists.txt  STM32F042F6Px_FLASH.ld
cmake/: arm-none-eabi.cmake
src/: main.c  main.cpp  sense.c  sense.cpp  sense.h  sense.hpp  tusb_config.h  usb_descriptors.c
